--- a/mechanical-metal/src/components/projectCard.astro
+++ b/mechanical-metal/src/components/projectCard.astro
@@ -4,32 +4,59 @@ const { projectProps } = Astro.props;
 
 <!-- 
   TODO:
-  1. Add the tags
-  2. Add the GitHub Repos if available -> use SVG icon
-  3. Adjust the spacing and structure
-  4. Consider some spicy CSS effects and or animations for projects (Carousel is boring)
+  Consider some spicy CSS effects and or animations for projects (Carousel is boring)
  -->
-
-<section class="padding2 container card left-accent-tab">
-  <h2>/{projectProps.data.name}</h2>
+<div class="container card left-accent-tab">
+  <h2>// {projectProps.data.name}</h2>
   <div class="flex">
     <img
       class="margin3"
       src={projectProps.data.imagePath}
       alt=`${projectProps.data.name} image`
     />
-    <div class="container column">
-      <p>{projectProps.data.text}</p>
+    <div class="details-box flex column">
+      <p class="margin3">{projectProps.data.text}</p>
       <ul>
         {projectProps.data.keyPoints.map((point: string) => <li>{point}</li>)}
       </ul>
-      <a class="proj-link" href={projectProps.data.link} target="_blank">Learn more</a>
+      <div class="link-box">
+        <a class="proj-link" href={projectProps.data.link} target="_blank"
+          >Learn more</a
+        >
+        {
+          projectProps.data.github !== "" && (
+            <a href={projectProps.data.github}>
+              <svg
+                class="icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="currentColor"
+                  d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"
+                />
+              </svg>
+            </a>
+          )
+        }
+      </div>
     </div>
   </div>
-</section>
+  <div>
+    {projectProps.data.tags.map((tag: string) => <p class="tag">{tag}</p>)}
+  </div>
+</div>
 
 <style>
-  .proj-link{
-    margin-top: var(--spacing2);
+  ul {
+    text-wrap: stable;
+    list-style-position: inside;
+  }
+  .details-box {
+    padding: var(--spacing3);
+    align-items: flex-start;
+  }
+  .link-box > * {
+    margin-right: var(--spacing3);
   }
 </style>
