--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -286,6 +286,7 @@
   }
 
   .theme-toggle {
+    vertical-align: middle;
     padding: 0;
     background-color: transparent;
     color: var(--accent);
