--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -6,7 +6,7 @@
   <div>
     <div class="navbar">
       <div>
-        <h2>Abdu-logo</h2>
+        <h2>Abdu Abuharrus</h2>
       </div>
 
       <div class="nav-links">
