--- a/mechanical-metal/src/components/projectsSection.astro
+++ b/mechanical-metal/src/components/projectsSection.astro
@@ -7,6 +7,8 @@ const projects = await getCollection("projects");
 
 <section id="Projects">
   <h1>Projects</h1>
+  <h3>Always working on something</h3>
+  <p>have a look</p>
   <div class="projects-scroll-container">
     {projects.map((project: any) => <ProjectCard projectProps={project} />)}
   </div>
