--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -72,6 +72,7 @@
     --spacing5: 40px;
     --spacing6: 80px;
     --spacing7: 160px;
+    --spacing8: 320px;
     /* fonts in typography file */
     --h1: 600 3rem/1.2em var(--ff1);
     --h2: 600 2rem/1.2em var(--ff2);
@@ -97,7 +98,7 @@ section {
     /* max-width: 1080px; */
     max-width: 1200px;
     /* max-width: 90%; */
-    margin: var(--spacing7) auto;
+    margin: var(--spacing8) auto;
 }
 
 
