Move banner into header - reshuffle structure

--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -12,9 +12,12 @@ const layoutProps = {
 ---
 
 <BaseLayout {layoutProps}>
-  <Banner2 />
+  <!-- <HomeBanner /> -->
+  <header>
+    <Banner2 />
+  </header>
+
   <main>
-    <!-- <HomeBanner /> -->
     <Bio />
     <ProjectsSection />
     <SkillsSection />
