--- a/mechanical-metal/src/layouts/baseLayout.astro
+++ b/mechanical-metal/src/layouts/baseLayout.astro
@@ -1,24 +1,22 @@
 ---
-import Navbar from "../components/navbar.astro"
-import Footer from "../components/footer.astro"
+import Navbar from "../components/navbar.astro";
+import Footer from "../components/footer.astro";
 
-import '../styles/styles.css'
+import "../styles/styles.css";
 
-const {layoutProps} = Astro.props;
+const { layoutProps } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{layoutProps.title}</title>
-</head>
-<body>
-    <header>
-        <Navbar />
-    </header>
+  </head>
+  <body>
+    <Navbar />
     <slot />
     <Footer />
-</body>
+  </body>
 </html>
