--- a/mechanical-metal/src/components/homeBanner.astro
+++ b/mechanical-metal/src/components/homeBanner.astro
@@ -1,6 +1,8 @@
 ---
 import { Image } from "astro:assets";
 import bannerImage from "../images/abdu-banner.webp";
+
+// Simple Hero with image on the right and hero to the left
 ---
 
 <section id="banner-section" class="margin3">
