--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -266,6 +266,7 @@
     left: 0;
     width: 100%;
     z-index: 1000;
+    /* border-bottom: 1px solid var(--primary); */
   }
   .navbar .logo {
     width: 10%;
