--- a/mechanical-metal/src/components/homeBanner.astro
+++ b/mechanical-metal/src/components/homeBanner.astro
@@ -5,51 +5,51 @@ import bannerImage from "../images/abdu-banner.webp";
 // Simple Hero with image on the right and hero to the left
 ---
 
-<section id="banner-section" class="margin3">
-  <div class="flex">
-    <div class="flex column">
-      <div class="banner-greet1">
-        <h1 class="greeting">،أهلًا</h1>
-      </div>
-      <div class="banner-greet2">
-        <h1 class="greeting">Hi,</h1>
-      </div>
-
-      <div class="intro-box">
-        <h3>I'm Abdu</h3>
-        <p>I code and break things, then try fixing them.</p>
-      </div>
+<div id="Home" class="flex padding3">
+  <div class="flex column">
+    <div class="greeting-box1">
+      <h1 class="greeting">،أهلًا</h1>
+    </div>
+    <div class="greeting-box2">
+      <h1 class="greeting">Hi,</h1>
     </div>
 
-    <Image class:list={"banner-img"} src={bannerImage} alt="banner photo" />
+    <div class="intro-box">
+      <h2 class="banner-text">I'm Abdu, a Software Developer</h2>
+      <div class="margin5">
+        <button
+          style="font-size: var(--spacing4);"
+          class="outline-btn"
+          onclick="document.getElementById('Bio')?.scrollIntoView({ behavior: 'smooth' });"
+          >Check out my stuff</button
+        >
+      </div>
+    </div>
   </div>
-  <div class="center margin5">
-    <!-- TODO: make this smoothly scroll down to first section -->
-    <button style="font-size: var(--spacing4);" class="outline-btn"
-      >Check out my stuff</button
-    >
+  <div class="visual-box">
+    <!-- <Image class:list={"banner-img"} src={bannerImage} alt="banner photo" /> -->
   </div>
-</section>
+</div>
 
 <style>
-  .flex {
-    display: flex;
-    gap: var(--spacing5);
-    flex-wrap: wrap;
-  }
-
-  #banner-section {
+  #Home {
+    padding: 10%;
+    height: 100vh;
+    align-items: center;
+    justify-content: flex-start;
+    overflow: hidden;
   }
   .greeting {
-    font-size: 8rem;
+    font-size: 10rem;
   }
 
-  .banner-greet1 {
-    align-self: flex-end;
+  .greeting-box1 {
+    margin-left: 40%;
   }
 
-  .banner-greet2 {
+  .greeting-box2 {
     align-self: flex-start;
+    margin-right: var(--spacing7);
   }
 
   .intro-box {
