--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -12,9 +12,9 @@ const layoutProps = {
 ---
 
 <BaseLayout {layoutProps}>
-  <!-- <HomeBanner /> -->
   <header>
-    <Banner2 />
+    <HomeBanner />
+    <!-- <Banner2 /> -->
   </header>
 
   <main>
