Add padding all around for sections

--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -97,7 +97,7 @@ body {
 section {
     width: 80%;
     max-width: 1200px;
-    padding-top: var(--spacing6);
+    padding: var(--spacing6);
     margin: var(--spacing6) auto;
 }
 
