--- a/mechanical-metal/src/components/homeBanner.astro
+++ b/mechanical-metal/src/components/homeBanner.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from "astro:assets";
-import bannerImage from "../images/abdu-banner.webp";
+import bannerImage from "../images/silver-dunes.webp";
 
 // Simple Hero with image on the right and hero to the left
 ---
 
-<div id="Home" class="flex padding3">
+<div id="Home" class="flex padding3 hero-gradient">
   <div class="flex column">
     <div class="greeting-box1">
       <h1 class="greeting">،أهلًا</h1>
@@ -27,7 +27,8 @@ import bannerImage from "../images/abdu-banner.webp";
     </div>
   </div>
   <div class="visual-box">
-    <!-- <Image class:list={"banner-img"} src={bannerImage} alt="banner photo" /> -->
+    <Image class:list={"banner-img"} src={bannerImage} alt="banner photo" />
+    <small>// I write code not design UIs so here's my fav photograph</small>
   </div>
 </div>
 
@@ -44,12 +45,11 @@ import bannerImage from "../images/abdu-banner.webp";
   }
 
   .greeting-box1 {
-    margin-left: 40%;
+    margin-left: 20%;
   }
 
   .greeting-box2 {
     align-self: flex-start;
-    margin-right: var(--spacing7);
   }
 
   .intro-box {
@@ -59,5 +59,26 @@ import bannerImage from "../images/abdu-banner.webp";
   }
   .banner-img {
     height: 100%;
+    width: 100%;
+  }
+
+  .hero-gradient {
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(circle at 20% 20%, var(--background), var(--subbackground));
+    background-size: 200% 200%;
+    animation: radialGradientMove 10s ease-in-out infinite;
+  }
+
+  @keyframes radialGradientMove {
+    0% {
+      background-position: 20% 20%;
+    }
+    50% {
+      background-position: 80% 80%;
+    }
+    100% {
+      background-position: 20% 20%;
+    }
   }
 </style>
