set greeting h1 weights to normal

--- a/mechanical-metal/src/components/homeBanner.astro
+++ b/mechanical-metal/src/components/homeBanner.astro
@@ -41,7 +41,8 @@ import bannerImage from "../images/silver-dunes.webp";
     overflow: hidden;
   }
   .greeting {
-    font-size: 6rem;
+    font-size: 10rem;
+    font-weight: 400;
   }
 
   .greeting-box1 {
