--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -89,9 +89,13 @@ body {
     text-wrap: balance;
     font: var(--p);
     color: var(--text);
+    /* background: var(--background); */
 
-    background: var(--background);
-    /* background-image: linear-gradient(to top, var(--background) 10%, var(--subbackground) 100%); */
+    background: radial-gradient(circle at 20% 20%,
+            var(--background),
+            var(--subbackground));
+    background-size: 200% 200%;
+    animation: radialGradientMove 20s ease-in-out infinite;
 }
 
 section {
@@ -299,11 +303,21 @@ button:hover {
 
 }
 
+/* Animations */
 
-/* Custom partials and componenets */
+@keyframes radialGradientMove {
+    0% {
+        background-position: 20% 20%;
+    }
 
+    50% {
+        background-position: 80% 80%;
+    }
 
-
+    100% {
+        background-position: 20% 20%;
+    }
+}
 
 
 
