--- a/mechanical-metal/src/components/projectModal.astro
+++ b/mechanical-metal/src/components/projectModal.astro
@@ -4,7 +4,7 @@ const {projectProps} = Astro.props;
 
 <div id="project-modal">
     <div class="flex column">
-        <h1>{projectProps.data.title}</h1>
+        <h1>{projectProps.data.name}</h1>
         <p>{projectProps.data.text}</p>
         <img src={projectProps.data.image} alt=`${projectProps.title} image`>
     </div>
