Integrate Svelte "island" for Project cards

--- a/mechanical-metal/src/components/projectsSection.astro
+++ b/mechanical-metal/src/components/projectsSection.astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from "astro:content";
-import ProjectCard from "./projectCard.astro";
+// import ProjectCard from "./projectCard.astro";
+import ProjectCard from "../components/projectCard.svelte";
 import ProjectModal from "./projectModal.astro";
 
 const projects = await getCollection("projects");
