--- a/mechanical-metal/src/components/projectsSection.astro
+++ b/mechanical-metal/src/components/projectsSection.astro
@@ -14,7 +14,7 @@ const projects = await getCollection("projects");
 <section id="Projects">
   <h1>Projects</h1>
   <!-- Pass the data to the island -->
-  <ProjectGallery projects={projects} />
+  <ProjectGallery client:only="svelte" projects={projects} />
 </section>
 
 <style>
