Refactor ` url-box` box to global style

--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -313,6 +313,10 @@ button:hover {
 
 }
 
+.url-box a {
+    margin-right: var(--spacing2);
+}
+
 .click-hover:hover {
     cursor: pointer;
     transform: scale(1.0625);
