--- a/mechanical-metal/src/components/skillCard.astro
+++ b/mechanical-metal/src/components/skillCard.astro
@@ -2,7 +2,10 @@
 const { skillProps } = Astro.props;
 ---
 
-<div id={`skill-${skillProps.id}`} class="container card top-accent-tab hidden">
+<div
+  id={`skill-${skillProps.id}`}
+  class="skill-card container card top-accent-tab hidden"
+>
   <div class="flex column padding3">
     <h2>{skillProps.data.name}</h2>
     <img
@@ -19,6 +22,9 @@ const { skillProps } = Astro.props;
 </div>
 
 <style>
+  .skill-card {
+    max-width: 40%;
+  }
   .skill-icon {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
     width: 2rem;
