--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -355,15 +355,49 @@ button:hover {
     position: relative;
 }
 
-.proj-modal-img {
-    width: 80%;
-}
-
 .modal-close {
     position: absolute;
     top: 1rem;
     right: 1rem;
     font-size: var(--fsize3);
+}
+
+.proj-carousel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.carousel-btn {
+    color: var(--text);
+    cursor: pointer;
+    padding: 0 var(--spacing2);
+}
+
+.proj-thumbnail {
+    object-fit: cover;
+    border-radius: var(--spacing1);
+    width: 80%;
+}
+
+.carousel-indicators {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.carousel-indicators span {
+    display: block;
+    width: var(--spacing2);
+    height: var(--spacing2);
+    background: var(--secondary);
+    border-radius: 50%;
+}
+
+.carousel-indicators .active {
+    background: var(--accent);
 }
 
 
