Add placeholder for blog

--- a/mechanical-metal/src/components/footer.astro
+++ b/mechanical-metal/src/components/footer.astro
@@ -88,10 +88,11 @@ const projects = await getCollection("projects");
     </div>
     <div class="flex column">
       <h3>Jump</h3>
-      <a href="">Home</a>
       <a href="/Bio">Bio</a>
       <a href="#Projects">Projects</a>
       <a href="#Skills">Skills</a>
+      <!-- TODO:  link to blog-->
+      <a href="">Garden & Blog</a>
     </div>
     <div class="flex column">
       <h3>Current Projects</h3>
