--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -4,6 +4,7 @@ import Bio from "../components/bio.astro";
 import ProjectsSection from "../components/projectsSection.astro";
 import SkillsSection from "../components/skillsSection.astro";
 import BaseLayout from "../layouts/baseLayout.astro";
+import ContactForm from "../components/contactForm.astro";
 
 const layoutProps = {
   title: "aabuharrus",
@@ -20,4 +21,5 @@ const layoutProps = {
     <SkillsSection />
   </main>
   <!-- TODO: Contact goes here -->
+   <ContactForm />
 </BaseLayout>
