Wire up buttons to scroll to Contact section

--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -255,7 +255,7 @@
         </button>
         <a href="#Bio">Bio</a>
         <a href="#Projects">Projects</a>
-        <a href="/Contact">Contact</a>
+        <a href="/#Contact">Contact</a>
       </div>
     </div>
   </div>
