Update contact button in the navbar, makes it stand out next to links

--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -255,7 +255,10 @@
         </button>
         <a href="#Bio">Bio</a>
         <a href="#Projects">Projects</a>
-        <a href="/#Contact">Contact</a>
+        <button
+          class="outline-btn"
+          onclick="document.getElementById('Contact')?.scrollIntoView({behavior: 'smooth'});"
+        >Contact</button>
       </div>
     </div>
   </div>
