Fix Bio anchor `href` target

--- a/mechanical-metal/src/components/footer.astro
+++ b/mechanical-metal/src/components/footer.astro
@@ -88,7 +88,7 @@ const projects = await getCollection("projects");
     </div>
     <div class="flex column">
       <h3>Jump</h3>
-      <a href="/Bio">Bio</a>
+      <a href="#Bio">Bio</a>
       <a href="#Projects">Projects</a>
       <a href="#Skills">Skills</a>
       <!-- TODO:  link to blog-->
