Center elements and align Labels

--- a/mechanical-metal/src/components/contactForm.astro
+++ b/mechanical-metal/src/components/contactForm.astro
@@ -13,7 +13,7 @@
   <h1>Contact me</h1>
   <p>Whether it's for work or fun, let's chat.</p>
   <div class="card">
-    <form action="" id="contact-form" class="flex column" action="mail">
+    <form action="" id="contact-form" class="flex column center" action="mail">
       <div>
         <label for="name-input">Full name</label>
         <input
@@ -67,7 +67,7 @@
     text-align: center;
     font-size: var(--fsize2);
     width: var(--spacing7);
-    min-width: var(--spacing3)
+    min-width: var(--spacing3);
   }
 
   @media (max-width: 900px) {
@@ -90,10 +90,9 @@
       box-sizing: border-box;
     }
     #contact-form {
-      text-align: center;
       align-items: center;
     }
-    
+
     .form-submit {
       width: 80%;
       min-width: unset;
