Create TS module to handle sending emails

--- a/mechanical-metal/src/components/contactForm.astro
+++ b/mechanical-metal/src/components/contactForm.astro
@@ -13,7 +13,7 @@
   <h1>Contact me</h1>
   <p>Whether it's for work or fun, let's chat.</p>
   <div class="card">
-    <form action="" id="contact-form" class="flex column center" action="mail">
+    <form action="src/scripts/mail.ts" id="contact-form" class="flex column center" action="mail">
       <div>
         <label for="name-input">Full name</label>
         <input
