Change input type to `"email"` to add Email form validation

--- a/mechanical-metal/src/components/contactForm.astro
+++ b/mechanical-metal/src/components/contactForm.astro
@@ -34,7 +34,7 @@
         <input
           required
           class="margin2"
-          type="text"
+          type="email"
           name="name"
           id="email-input"
           placeholder="Your email address"
@@ -153,7 +153,6 @@
     const object = Object.fromEntries(formData);
     const json = JSON.stringify(object);
 
-    // TODO:  add input validation
 
     status.innerHTML = "Please wait...";
 
