Implement media query breakpoints for responsiveness

--- a/mechanical-metal/src/components/skillCard.astro
+++ b/mechanical-metal/src/components/skillCard.astro
@@ -42,4 +42,14 @@ const { skillProps } = Astro.props;
     margin-bottom: 0.5em;
     padding-left: 0.2em;
   }
+
+  @media (max-width: 1007px) {
+    .skill-card {
+      min-width: 80%;
+    }
+    .skill-icon {
+      height: 0.5rem;
+      width: 0.5rem;
+    }
+  }
 </style>
