--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -214,7 +214,7 @@ dialog {
 }
 
 dialog::backdrop {
-    background: rgba(0,0,0,0.6);
+    background: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(2px);
 }
 
@@ -339,8 +339,6 @@ dialog::backdrop {
 .left-accent-tab {
     border-left: var(--spacing1) solid var(--accent);
     border-radius: var(--spacing1);
-    /* border-top-left-radius: var(--spacing1);
-    border-top-right-radius: var(--spacing1); */
 }
 
 .container {
@@ -401,7 +399,7 @@ dialog::backdrop {
     position: absolute;
     top: 1rem;
     right: 1rem;
-    font-size: var(--fsize3);
+    font-size: var(--fsize2);
 }
 
 .proj-carousel {
@@ -475,8 +473,76 @@ dialog::backdrop {
 
 /* Responsiveness */
 
-@media (max-width: 640px) {
+
+@media (max-width: 900px) {
     .flex {
         flex-direction: column;
+    }
+
+    h1 {
+        font: 600 2.5rem/0.8em var(--ff1);
+        ;
+    }
+
+    h2 {
+        font: 600 1.5rem/1.2em var(--ff2);
+    }
+
+    section {
+        width: 90%;
+        max-width: 100%;
+        padding: var(--spacing2);
+    }
+
+    dialog {
+        padding: var(--spacing3);
+    }
+
+    .container {
+        width: 100%;
+        padding: var(--spacing2);
+    }
+
+    /* Responsive styles for Project Modal */
+    .modal-content {
+        max-width: 80%;
+        max-height: 80%;
+        padding: var(--spacing3);
+    }
+
+    .proj-thumbnail {
+        width: 100%;
+    }
+
+    @media (max-width: 640px) {
+        .flex {
+            flex-direction: column;
+            align-items: center;
+        }
+
+
+        /* Project Modal  styles */
+        .modal-content {
+            max-width: 98vw;
+            max-height: 98vh;
+            padding: var(--spacing2);
+            border-radius: var(--spacing1);
+        }
+
+        .modal-close {
+            top: 0.5rem;
+            right: 0.5rem;
+            font-size: var(--fsize2);
+        }
+
+        .proj-carousel {
+            flex-direction: column;
+            gap: var(--spacing2);
+        }
+
+        .proj-thumbnail {
+            width: 100%;
+        }
+
     }
 }
