--- a/mechanical-metal/src/components/homeBanner.astro
+++ b/mechanical-metal/src/components/homeBanner.astro
@@ -1,8 +1,6 @@
 ---
 import { Image } from "astro:assets";
 import bannerImage from "../images/silver-dunes.webp";
-
-// Simple Hero with image on the right and hero to the left
 ---
 
 <div id="Home" class="flex padding3 hero-gradient">
@@ -69,5 +67,36 @@ import bannerImage from "../images/silver-dunes.webp";
     height: 100%;
     width: 120%;
   }
- 
+
+  @media (max-width: 900px) {
+    #Home {
+      padding: 5%;
+      height: auto;
+      width: 100vw;
+    }
+    .greeting {
+      font-size: 4rem;
+    }
+    .greeting-box1 {
+      margin-left: 0;
+    }
+    .visual-box {
+      margin-top: var(--spacing3);
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .banner-img {
+      width: 100%;
+      height: auto;
+      max-width: fit-content;
+    }
+    .intro-box {
+      align-self: center;
+    }
+    .intro-box button {
+      margin-bottom: 1rem;
+    }
+  }
 </style>
