add `margin-top` for mobile

--- a/mechanical-metal/src/components/homeBanner.astro
+++ b/mechanical-metal/src/components/homeBanner.astro
@@ -70,6 +70,7 @@ import bannerImage from "../images/silver-dunes.webp";
 
   @media (max-width: 900px) {
     #Home {
+      margin-top: var(--spacing6);
       padding: 5%;
       height: auto;
       width: 100vw;
