--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -27,32 +27,6 @@
     --accent: hsl(80, 33%, 41%);
 }
 
-/* Theme preference colors */
-/* @media (prefers-color-scheme: light) {
-    :root{
-        --text: hsl(80, 22%, 8%);
-        --subtext: hsl(80, 22%, 60%);
-        --background: hsl(83, 27%, 94%);
-        --subbackground: hsl(83, 27%, 90%);
-        --primary: hsl(80, 28%, 29%);
-        --secondary: hsl(80, 29%, 70%);
-        --accent: hsl(80, 33%, 41%);
-    }
-}
-@media (prefers-color-scheme: dark) {
-    :root {
-        --text: hsl(80, 22%, 92%);
-        --subtext: hsl(80, 22%, 40%);
-        --background: hsl(83, 27%, 6%);
-        --subbackground: hsl(83, 27%, 10%);
-        --primary: hsl(80, 28%, 71%);
-        --secondary: hsl(80, 29%, 30%);
-        --accent: hsl(80, 33%, 49%);
-    }
-} */
-
-
-
 /* Variable definitions */
 :root {
     /* ff and ff2 fonts */
@@ -477,6 +451,10 @@ dialog::backdrop {
 @media (max-width: 900px) {
     .flex {
         flex-direction: column;
+    }
+
+    .outline-btn {
+        border: 1px solid var(--primary);
     }
 
     h1 {
