--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -188,7 +188,7 @@ dialog {
 }
 
 dialog::backdrop {
-    background: rgba(0, 0, 0, 0.6);
+    background: hsla(0, 0, 0, 0.6);
     backdrop-filter: blur(2px);
 }
 
@@ -455,6 +455,11 @@ dialog::backdrop {
 
     .outline-btn {
         border: 1px solid var(--primary);
+    }
+
+    .tag {
+        font-size: var(--fsize1);
+        padding: var(--spacing1);
     }
 
     h1 {
