Add accessibility tag `aria-hidden="true"`

--- a/mechanical-metal/src/components/contactForm.astro
+++ b/mechanical-metal/src/components/contactForm.astro
@@ -19,6 +19,7 @@
         type="hidden"
         name="access_key"
         value="7605bbaa-a1a2-4db5-b531-d98ac470c246"
+        aria-hidden="true"
       />
       <div>
         <label for="name-input">Full name</label>
